Created Spotify website

--- a/Spotify/style.css
+++ b/Spotify/style.css
@@ -28,6 +28,7 @@
   flex:1;
   overflow:auto;
   border-radius:1rem;
+  padding:0 1.5rem 0 1.5rem;
 }
 
 .music-player{
@@ -133,4 +134,155 @@ a{
   margin-top:0.5rem;
   height:2rem;
   width:fit-content;
+}
+
+.dark-badge{
+  background-color:black;
+  color:white;
+}
+
+/* #arrow{
+  color:black;
+} */
+
+.sticky-nav{
+  position:sticky;
+  top:0;
+  background-color:#121212;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:1rem;
+  z-index:10;
+}
+
+.sticky-div-nav {
+  /* font-size:2rem;
+  width:2rem; */
+  margin-left:0.5rem;
+}
+
+.nav-div-nav{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.nav-item{
+  margin-right: 1rem;
+}
+
+
+@media(max-width: 1000px){
+  .hide{
+    display:none;
+  }
+}
+
+.card{
+  background-color:#232323;
+  width:150px;
+  border-radius:0.5rem;
+  padding:1rem;
+  margin-left:1.5rem;
+  margin-top:1rem;
+}
+
+.cards-container{
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.card-img{
+  width:100%;
+  border-radius:0.5rem;
+}
+
+.card-title{
+  font-weight:600;
+  line-height:1rem;
+}
+.card-info{
+  font-size:0.85rem;
+  opacity:0.7;
+}
+
+.footer{
+  height:300px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.line{
+  width:90%;
+  height:50%;
+  border-top:1px solid white;
+  opacity:0.4;
+
+}
+
+.music-player{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.album{
+  width:25%;
+}
+
+.player{
+  width:50%;
+}
+
+.controls{
+  width:25%;
+}
+
+.player-controls{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.player-control-icon{
+  height:1rem;
+  margin-right:1.75rem;
+  opacity:0.7;
+}
+
+.player-control-icon:hover{
+  opacity:1;
+}
+
+.playback-bar{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.progress-bar{
+  width:70%;
+  appearance:none;
+  background-color:transparent;
+  cursor:pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+  background-color:#ddd;
+  border-radius:100px;
+  height:0.2rem;
+}
+
+.progress-bar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+  appearance:none;
+  height:1rem;
+  width:1rem;
+  background-color:#1bd760;
+  border-radius:50%;
+  margin-top:-4px;
+  z-index:2;
+  position:relative;
 }
